Change form name to spcs

--- a/app/views/bookings/confirmation.html.erb
+++ b/app/views/bookings/confirmation.html.erb
@@ -11,7 +11,7 @@
     class="stripe-button"
     data-key="pk_test_GNkZKnVDlMTTXnR2mFFpBWQp"
     data-image="/doge.jpeg"
-    data-name="drivewaze"
+    data-name="spcs"
     data-description="Charge for driveway rental"
     data-amount="<%= @total %>00">
   </script>
